# crypto-xp

./: .clangd  README.md
src/: CMakeLists.txt  crypto_helpers.cpp  crypto_helpers.hpp  crypto_utils.hpp  first_one.cpp
src/TEA/: tea_impl.cpp  tea_impl.hpp  tea_struct.cpp  tea_struct.hpp
src/XXTEA/: xxtea_struct.cpp  xxtea_struct.hpp
src/mini_apps/: messaging_client.cpp
src/old/: tea_impl.cpp  tea_testing.cpp
src/testing/: tea_testing.cpp  tea_testing2.cpp
